force-app/main/default/objects/Itinerary__c/fields/accomodation__c.field-meta.xml
<CustomField>
    <fullName>accomodation__c</fullName>
    <label>accomodation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>