force-app/main/default/objects/Itinerary__c/fields/country_context__c.field-meta.xml
<CustomField>
    <fullName>country_context__c</fullName>
    <label>Country Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>