force-app/main/default/objects/Itinerary__c/fields/day_context__c.field-meta.xml
<CustomField>
    <fullName>day_context__c</fullName>
    <label>Day Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PreX Transit Day</fullName>
            </value>
            <value>
                <fullName>PreX Tour Check In Day</fullName>
            </value>
            <value>
                <fullName>PreX Tour Start Day</fullName>
            </value>
            <value>
                <fullName>PreX Tour Day</fullName>
            </value>
            <value>
                <fullName>Main Arrival Transit Day</fullName>
            </value>
            <value>
                <fullName>Main Tour Check In Day</fullName>
            </value>
            <value>
                <fullName>Main Tour Start Day</fullName>
            </value>
            <value>
                <fullName>Main Tour Day</fullName>
            </value>
            <value>
                <fullName>Upgrade Day</fullName>
            </value>
            <value>
                <fullName>Main Tour End Day</fullName>
            </value>
            <value>
                <fullName>Main Departure Transit / PstX Tour Start Day</fullName>
            </value>
            <value>
                <fullName>Main Departure Transit Day</fullName>
            </value>
            <value>
                <fullName>PstX Tour Day</fullName>
            </value>
            <value>
                <fullName>PstX Tour End Day</fullName>
            </value>
            <value>
                <fullName>PstX Transit Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>