force-app/main/default/objects/Itinerary__c/fields/Day_number__c.field-meta.xml
<CustomField>
    <fullName>Day_number__c</fullName>
    <label>Day number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>