force-app/main/default/objects/Itinerary__c/fields/itinerary_context__c.field-meta.xml
<CustomField>
    <fullName>itinerary_context__c</fullName>
    <label>Itinerary Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>itinerary_context</valueSetName>
    </valueSet>
</CustomField>