force-app/main/default/objects/Itinerary__c/fields/Meals_Included__c.field-meta.xml
<CustomField>
    <fullName>Meals_Included__c</fullName>
    <label>Meals Included</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>In-Flight</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Lunch or Dinner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>