force-app/main/default/objects/Itinerary__c/fields/Min__c.field-meta.xml
<CustomField>
    <fullName>Min__c</fullName>
    <label>Min</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>