force-app/main/default/objects/Itinerary__c/fields/Transfers__c.field-meta.xml
<CustomField>
    <fullName>Transfers__c</fullName>
    <label>Transfers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>