force-app/main/default/objects/Itinerary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Itinerary__c</columns>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Day_number__c</columns>
    <columns>title__c</columns>
    <columns>body__c</columns>
    <columns>accomodation__c</columns>
    <columns>Meals_Included__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>