force-app/main/default/objects/Itinerary__c/listViews/pete.listView-meta.xml
<ListView>
    <fullName>pete</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Itinerary__c</columns>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Day_number__c</columns>
    <columns>title__c</columns>
    <columns>body__c</columns>
    <columns>accomodation__c</columns>
    <columns>Meals_Included__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Deal__c</field>
        <operation>equals</operation>
        <value>1482</value>
    </filters>
    <label>pete</label>
</ListView>